// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense
    s
     totalling 
    $1,141.95
  </h1>
</div>
`;

exports[`should render ExpensesSummary correctly for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $1.95
  </h1>
</div>
`;
